Revert "deleted broken link"
This reverts commit 626080cc6cf26fc293cb49880032e51cd10409b0.

--- a/docs/features/models/relation_extraction.ipynb
+++ b/docs/features/models/relation_extraction.ipynb
@@ -20,6 +20,7 @@
     "\n",
     "    4.1 [Predict using Python](#4.1-Predict-using-Python)\n",
     "    \n",
+    "    4.2 [Predict using CLI](#4.2-Predict-using-CLI)\n",
     "\n",
     "5. [Customize the model](#5.-Customize-the-model)\n",
     "    \n",
